[package]
authors = ["realaravinth <realaravinth@batsense.net>"]
build = "build.rs"
documentation = "https://github.con/realaravinth/libmedium"
edition = "2021"
homepage = "https://github.com/realaravinth/libmedium"
license = "AGPLv3 or later version"
name = "libmedium"
readme = "https://github.com/realaravinth/libmedium/blob/master/README.md"
repository = "https://github.com/realaravinth/libmedium"
version = "0.1.0"

[dependencies]
actix-http = "3.0.4"
actix-rt = "2"
actix-web = "4.0.1"
bincode = "1.3.3"
chrono = "0.4.23"
config = "0.13"
derive_more = "0.99"
futures = "0.3.17"
lazy_static = "1.4"
log = "0.4"
num_cpus = "1.13"
pretty_env_logger = "0.5"
sailfish = "0.8.1"
serde = "1"
serde_json = "1"
sled = "0.34.7"
syntect = "5.0.0"
url = "2.2"
actix-web-codegen-const-routes = "0.2.0"

[dependencies.graphql_client]
features = ["reqwest"]
version = "0.13.0"

[dependencies.reqwest]
features = ["json"]
version = "0.11.22"

sled = "0.34.7"
bincode = "1.3.3"
futures = "0.3.17"
